Game page added. scores added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name="settings"></activity>
         <activity android:name="about"></activity>
+        <activity android:name="game"></activity>
+
     </application>
 
 </manifest>
