--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".settings" />
         <activity android:name=".about" />
-        <activity android:name=".game" />
+        <activity android:name=".game1" />
+        <activity android:name=".game2" />
         <activity android:name=".result" />
         <activity android:name=".startgame"></activity>
     </application>
